--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -32,7 +32,7 @@ block content
         img.displayed(src='{{topic_image}}', width='700', alt=' topic image')
     .row
         audio(controls="")
-            source(src="/static/audio/science_ganymede.mp3", type="audio/mpeg")
+            source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3", type="audio/mpeg")
 
         //audio(preload="auto", controls="")
             source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3")
