--- a/static/css/smarty_crap.css
+++ b/static/css/smarty_crap.css
@@ -1,3 +1,108 @@
-body {
-    background-color: #fff;
+
+html body {
+    -webkit-transition: opacity cubic-bezier(0.24, .8, .55, .94);
+    -webkit-transition-delay: .2s;
+    -moz-transition: opacity cubic-bezier(0.24, .8, .55, .94) .2s;
+    -o-transition: opacity cubic-bezier(0.24, .8, .55, .94) .2s;
+    transition: opacity cubic-bezier(0.24, .8, .55, .94) .2s;
+
+    font-family: proxima-nova, helvetica, sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+
+
+body>section.main-content article {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
+    padding: 25px;
+    font-size: 1.25em;
+    font-weight: 400;
+}
+
+body>section.main-content article h1 {
+    display: -moz-inline-stack;
+    display: inline-block;
+    vertical-align: middle;
+    *vertical-align: auto;
+    zoom: 1;
+    *display: inline;
+    margin: auto;
+    line-height: 1em;
+    margin-top: .1em;
+}
+body>section.main-content article h1 b {
+    color: #2e90f2;
+    letter-spacing: 0;
+}
+body>section.main-content article p b a {
+    color: #fff;
+}
+body>section.main-content article ul {
+    max-width: 850px;
+    margin: auto;
+}
+body>section.main-content article ul li:not(:last-child):after {
+    content: "";
+    width: 75px;
+    display: block;
+    border-bottom: 2px solid #ccc;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
+}
+body>section.main-content article ul li:first-child:after {
+    margin-top: 1.5em;
+}
+body>section.main-content article ul li p {
+    line-height: 1.5em;
+}
+body>section.main-content article ul li.page-title {
+    text-transform: uppercase;
+    font-size: .85em;
+    font-weight: 700;
+    color: #666;
+}
+
+
+
+body>section.main-content article[data-id=our-mission] {
+    background-color: #f2f1f1;
+    color: #666;
+}
+body>section.main-content article[data-id=our-mission] ul li:not(:last-child):after {
+    border-color: #ccc;
+}
+@media only screen and (min-width:1441px) {
+    body>section.main-content article[data-id=our-mission] h1, body>section.main-content article[data-id=our-mission] ul {
+    max-width: 1200px;
+}
+}@media only screen and (min-width:1026px) and (max-width:1440px) {
+    body>section.main-content article[data-id=our-mission] h1, body>section.main-content article[data-id=our-mission] ul {
+    max-width: 950px;
+}
+}@media only screen and (min-width:1026px) and (max-width:1440px) and (min--moz-device-pixel-ratio:1.3), (-o-min-device-pixel-ratio:2.6 / 2), (-webkit-min-device-pixel-ratio:1.3), (min-device-pixel-ratio:1.3), (min-resolution:1.3dppx) {
+    body>section.main-content article[data-id=our-mission] h1, body>section.main-content article[data-id=our-mission] ul {
+    max-width: 950px;
+}
+}@media only screen and (min-width:751px) and (max-width:1025px) {
+    body>section.main-content article[data-id=our-mission] h1, body>section.main-content article[data-id=our-mission] ul {
+    max-width: 950px;
+}
+}@media only screen and (min-width:641px) and (max-width:750px) {
+    body>section.main-content article[data-id=our-mission] h1, body>section.main-content article[data-id=our-mission] ul {
+    max-width: 600px;
+}
+}@media only screen and (max-width:640px) {
+    body>section.main-content article[data-id=our-mission] h1 {
+    max-width: 285px;
+}
+body>section.main-content article[data-id=our-mission] ul {
+    max-width: 300px;
+}
+}body>section.main-content article[data-id=our-mission] h1 {
+    color: #999;
 }
