--- a/templates/audio_doc.jade
+++ b/templates/audio_doc.jade
@@ -38,7 +38,7 @@ block content
         //audio(preload="auto", controls="")
             source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3")
 
-        audio(controls="")
+        //audio(controls="")
             source(src="http://osvaldas.info/examples/audio-player-responsive-and-touch-friendly/audio.mp3", type="audio/mpeg")
 
 
