--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -317,7 +317,31 @@
   </header>
 
 
+  <!-- Audiodocs. The first is the most recent one -->
 
+  <section id="recent-episode">
+    <div class="container previous-audiodoc">
+      <div class="row">
+
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+          <div class="episode-title">
+            {{audiodocs[0].topic_name}}
+          </div>
+
+          <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
+          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
+          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
+        </div>
+
+        <div class="col-lg-12">
+          <audio controls>
+            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
+      </div>
+    </div> <!-- container -->
+  </section>
 
   <!-- About Section -->
   <section class="success" id="about">
@@ -341,135 +365,33 @@
   </section>g
 
 
+<!-- PREVIOUS AUDIODOCS!! -->
 
-  <!-- Audiodocs. The first is the most recent one -->
-
-  <section id="episodes">
+  <section id="other-episodes">
+    {% for audiodoc in audiodocs %}
     <div class="container previous-audiodoc">
       <div class="row">
 
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <div class="episode-title">
-            {{audiodocs[0].topic_name}}
+            {{audiodoc.topic_name}}
           </div>
 
-          <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
+          <p style="font-size:1.6em;">{{audiodocs.topic_description}}</p>
+          <p style="font-style:italic;">narrated by {{ audiodoc.narration_credits }}</p>
+          <p style="font-style:italic;">music by {{ audiodoc.music_credits }}</p>
         </div>
-
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
-            <source src="{{audiodocs[0].audio_ogg}}" type="audio/ogg">
-            <source src="{{audiodocs[0].audio_wav}}" type="audio/wav">
+            <source src="{{audiodoc.audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
-
-
-        <!-- Author -->
-
-          <div class="author-bio">
-            <div class="col-md-3">
-              <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
-            </div>
-            <div class="col-md-3">
-              <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodocs[0].author_name }} </h2>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="vertical-line">
-              <p> {{ audiodocs[0].author_bio | safe}} </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-12">
-          <div class="drop-downs">
-              <div class="comments-button">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[0].disqus_collapse}}" onclick="loadDisqus('{{audiodocs[0].disqus_collapse}}', '{{audiodocs[0].unique_id}}', 'http://knowitwall.com/{{audiodocs[0].unique_id}}', '{{audiodocs[0].unique_id}}' );"> Join the Discussion</button>
-                <div id="{{audiodocs[0].disqus_collapse}}" class="collapse">
-                  <!-- the function loadDisqus() places the Disqus thread here -->
-                   <div class="disqus-collapse" style="display:none;">Collapse Text</div>
-                </div>
-              </div>
-              <div class="transcript-button">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[0].transcript_collapse}}">Read the Transcript</button>
-                <div id="{{audiodocs[0].transcript_collapse}}" class="collapse transcript"> <!-- transcript class gives the padding -->
-                  {{ audiodocs[0].transcript | safe }}
-                </div>
-               </div>
-          </div>
         </div>
       </div>
     </div> <!-- container -->
-
-<!-- SECOND AUDIODOC!! -->
-
 <br>
 <br>
-    <div class="container previous-audiodoc">
-      <div class="row">
-
-        <div class="col-lg-8 col-lg-offset-2 text-center">
-          <div class="episode-title">
-            {{audiodocs[1].topic_name}}
-          </div>
-
-          <p style="font-size:1.6em;">{{audiodocs[1].topic_description}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodocs[1].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodocs[1].music_credits }}</p>
-        </div>
-
-        <div class="col-lg-12">
-          <audio controls>
-            <source src="{{audiodocs[1].audio_mp3}}" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-
-
-        <!-- Author -->
-
-          <div class="author-bio">
-            <div class="col-md-3">
-              <img class="clip-circle"class="img-responsive" src="{{audiodocs[1].author_image}}"  alt = "author image">
-            </div>
-            <div class="col-md-3">
-              <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodocs[1].author_name }} </h2>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="vertical-line">
-              <p> {{ audiodocs[1].author_bio | safe}} </p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-12">
-          <div class="drop-downs">
-              <div class="comments-button">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[1].disqus_collapse}}" onclick="loadDisqus('{{audiodocs[1].disqus_collapse}}', '{{audiodocs[1].unique_id}}', 'http://knowitwall.com/{{audiodocs[1].unique_id}}', '{{audiodocs[1].unique_id}}');"> Join the Discussion</button>
-                <div id="{{audiodocs[1].disqus_collapse}}" class="collapse">
-                  <!-- the function loadDisqus() places the Disqus thread here  -->
-                   <div class="disqus-collapse" style="display:none;">Collapse Text</div>
-                </div>
-              </div>
-              <div class="transcript-button">
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#{{audiodocs[1].transcript_collapse}}">Read the Transcript</button>
-                <div id="{{audiodocs[1].transcript_collapse}}" class="collapse transcript"> <!-- transcript class gives the padding -->
-                  {{ audiodocs[1].transcript | safe }}
-                </div>
-               </div>
-          </div>
-        </div>
-      </div>
-    </div> <!-- container -->
-
-
+    {% endfor %}
   </section> <!-- end of episodes -->
 
 
