--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -392,7 +392,7 @@
         <div class="row">
 
           <div class="col-lg-8 col-lg-offset-2 text-center">
-            <div class="episode-title{{audiodoc.topic_name_wrap}}" style="{{audiodoc.topic_name_wrap}}">
+            <div class="episode-title{{audiodoc.topic_name_wrap}}">
               {{audiodoc.topic_name | safe}}
             </div>
 
