--- a/templates/audiodoc.html
+++ b/templates/audiodoc.html
@@ -8,12 +8,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{audiodoc[0].topic_description | safe}}">
+  <meta name="description" content="{{audiodoc[0].og_description}}">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
-  <meta property="og:title" content="Know It Wall" />
-  <meta property="og:description" content="{{audiodoc[0].topic_description | safe}}" />
+  <meta property="og:title" content="{{audiodoc[0].og_name}}" />
+  <meta property="og:description" content="{{audiodoc[0].og_description}}" />
   <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodoc.url}}" />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
