--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -374,7 +374,7 @@
             <div class="vertical-line">
             <p class = 'justify'>If you have more interests than you can keep track of, you’re in the right place. We make short documentaries, written by experts in their fields, for the enjoyment of everyone.</p>
             <br>
-            <p class = 'justify'>Right now you can listen to them, but soon you'll be able to watch them too. From space to spider monkeys, pyramids to Pythagoras, there’s no limit to what you could be learning!</p>
+            <p class = 'justify'>Right now you can listen to new ones every two weeks, but soon you'll be able to watch them too. From space to spider monkeys, pyramids to Pythagoras, there’s no limit to what you could be learning!</p>
           </div>
       </div>
     </div>
