--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -45,6 +45,11 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
+  <!-- Sharethis.com: this makes the social media buttons work -->
+  <script type="text/javascript">var switchTo5x=true;</script>
+  <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+
 
 
 </head>
@@ -523,6 +528,15 @@
   <script src="/static/js/knowitwall.js"></script>
 
   <script src="/static/js/audioplayer.js"></script>
+
+  <!-- Sharethis.com: to make the social media buttons work -->
+  <script type="text/javascript">stLight.options({publisher: "08e3a3e8-abb1-434a-8ebb-df836483492f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+  <script>
+  var options={ "publisher": "08e3a3e8-abb1-434a-8ebb-df836483492f", "position": "left", "ad": { "visible": false, "openDelay": 5, "closeDelay": 0}, "chicklets": { "items": ["facebook", "twitter"]}};
+  var st_hover_widget = new sharethis.widgets.hoverbuttons(options);
+  </script>
+
+
 
 
   <script>
