--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -15,6 +15,7 @@
   <meta property="og:title" content="{{audiodoc[0].og_name}}" />
   <meta property="og:description" content="{{audiodoc[0].og_description}}" />
   <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodoc.url}}" />
+  <meta property=”og:type” content=”website” />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
@@ -45,10 +46,12 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <!-- Sharethis.com: this makes the social media buttons work -->
-  <script type="text/javascript">var switchTo5x=true;</script>
-  <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
-  <script type="text/javascript" src="https://ss.sharethis.com/loader.js"></script>
+    <!-- Sharethis.com: this makes the social media buttons work -->
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://ws.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript" src="http://ss.sharethis.com/loader.js"></script>
+
+
 
 
 
