--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -378,7 +378,7 @@
           <div class="transcript"> <!-- transcript class gives the padding -->
             {{ audiodoc[0].transcript | safe }}
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
-            <div class="addthis_sharing_toolbox"></div>
+            <div class="addthis_sharing_toolbox" style="float: right;"></div>
           </div>
         </div>
       </div>  <!-- row -->
@@ -556,5 +556,4 @@
     });
   </script>
 </body>
-</html><!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55df4f643792046e" async="async"></script>
+</html>
