--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -392,7 +392,7 @@
         <div class="row">
 
           <div class="col-lg-10 col-lg-offset-1 text-center">
-            <div class="episode-title{{audiodoc.topic_name_wrap}}">
+            <div class="episode-title">
               {{audiodoc.topic_name | safe}}
             </div>
 
